Kbe-15-DTO (#10)
* add DTO and Mapper class

* add mapper to controller classes

* add findID to DTOMapper

* fix format

* fix ControllerTests with DTO

* fix service tests with dto